--- a/glamifyfrontend/package.json
+++ b/glamifyfrontend/package.json
@@ -6,14 +6,16 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
+    "@mui/material": "^6.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-slick": "^0.23.13",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "chart.js": "^4.4.6",
     "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
